force-app/main/default/objects/Account/fields/Group_Account__c.field-meta.xml
<CustomField>
    <fullName>Group_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Group Account</label>
    <referenceTo>Group_Account__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>