force-app/main/default/objects/Account/fields/Grupo_Conta__c.field-meta.xml
<CustomField>
    <fullName>Grupo_Conta__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Grupo Conta</label>
    <referenceTo>Grupo_Conta__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>